--- a/index.html
+++ b/index.html
@@ -20,22 +20,44 @@
     <section id="1">
         <div class="inner-section">
             <h1>Home</h1>
-            <p>Hi, I am Md. Alauddin. I have experince of 14+ years of Glass</p>
+            <p>Hi there! I'm MD Alauddin, and my passion lies in the artistry of glasswork. With a keen eye for perfection, I meticulously craft and shape glass into stunning pieces that captivate and inspire. My dedication to this craft extends beyond mere skill—it's a commitment to transforming ideas into exquisite realities through the medium of glass.</p>
+            <br>
+            <div class="img2"></div>
+            <div class="img3"></div>
         </div>
     </section>
     <section id="2">
         <div class="inner-section">
-            <h1>About</h1>
+            <h1>About Me</h1>
+            <p>Hi, My name is MD. Alauddin. I have experince of Glass around 14 years. I can do many works of Glass such as: </p>
+            <ol type="1" style="margin-left: 30px;">
+                <li>Window</li>
+                <li>Sliding Glass Door</li>
+                <li>Touch Mirror (Mirror with background light and touch sensor)</li>
+                <li>Simple Mirror</li>
+                <li>Simple Glass Door (Plain/Design)</li>
+            </ol>
+            <p>and many more things.</p>
         </div>
     </section>
     <section id="3">
         <div class="inner-section">
             <h1>Gallery</h1>
+            <div class="img1"></div>
+            <div class="img2"></div>
+            <div class="img3"></div>
+            <div class="img4"></div>
         </div>
     </section>
     <section id="4">
         <div class="inner-section">
             <h1>Contact</h1>
+            <p>
+                <b>EMAIL:</b> alauddinmd915@gmail.com <br>
+                <b>PHONE:</b> +91 9903688786 <br>
+                <b>WHATSAPP:</b> +91 9903688786 <br>
+                <b>ADDRESS:</b> 1A C.N. ROY ROAD KOLKATA- 700039, WEST BENGAL, INDIA
+            </p>
         </div>
     </section>
     <section id="5">
