--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <title>Albela Glass</title>
     <link rel="icon" href="Untitled-1.jpg">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fas fa-bars"></i>
+        </label>
+        <label class="logo">ALBELA GLASS</label>
         <ul>
             <li id="home">Home</li>
             <li id="about">About Me</li>
@@ -22,18 +28,17 @@
             <h1>Home</h1>
             <p>Hi there! I'm MD Alauddin, and my passion lies in the artistry of glasswork. With a keen eye for perfection, I meticulously craft and shape glass into stunning pieces that captivate and inspire. My dedication to this craft extends beyond mere skill—it's a commitment to transforming ideas into exquisite realities through the medium of glass.</p>
             <br>
-            <div class="img2"></div>
-            <div class="img3"></div>
+        
         </div>
     </section>
     <section id="2">
         <div class="inner-section">
             <h1>About Me</h1>
-            <p>Hi, My name is MD. Alauddin. I have experince of Glass around 14 years. I can do many works of Glass such as: </p>
+            <p>My name is MD ALAUDDIN, and I am passionate about the art of glasswork. Working with glass allows me to create beautiful and functional pieces that reflect both creativity and craftsmanship. Each day in my workshop is a journey of precision and imagination, where molten glass transforms into delicate forms under my skilled hands. From intricate sculptures to practical household items, I find joy in every step of the glassmaking process. My dedication to this ancient craft drives me to constantly refine my techniques and explore new possibilities, ensuring that each piece I create is a testament to both tradition and innovation in the world of glass art.. I can do many works of Glass such as: </p>
             <ol type="1" style="margin-left: 30px;">
                 <li>Window</li>
                 <li>Sliding Glass Door</li>
-                <li>Touch Mirror (Mirror with background light and touch sensor)</li>
+                <li>Custom Design Touch Mirror (Mirror with background light and touch sensor)</li>
                 <li>Simple Mirror</li>
                 <li>Simple Glass Door (Plain/Design)</li>
             </ol>
