--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
     <section id="3">
         <div class="inner-section">
             <h1>Gallery</h1>
-            <div class="img1"></div>
-            <div class="img2"></div>
-            <div class="img3"></div>
-            <div class="img4"></div>
+            <div class="a"></div>
+            <h3>Glass Shelf</h3>
+            <div class="b"></div>
+            <h3>Front Image of Shop</h3>
+            <div class="c"></div>
+            <h3>Visiting Card of Shop</h3>
+            <div class="d"></div>
         </div>
     </section>
     <section id="4">
@@ -61,7 +64,7 @@
                 <b>EMAIL:</b> alauddinmd915@gmail.com <br>
                 <b>PHONE:</b> +91 9903688786 <br>
                 <b>WHATSAPP:</b> +91 9903688786 <br>
-                <b>ADDRESS:</b> 1A C.N. ROY ROAD KOLKATA- 700039, WEST BENGAL, INDIA
+                <b>ADDRESS:</b> 1A CHANDRA NATH ROY ROAD KOLKATA- 700039, WEST BENGAL, INDIA
             </p>
         </div>
     </section>
