--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -36,11 +36,23 @@
             <h1>About Me</h1>
             <p>My name is MD ALAUDDIN, and I am passionate about the art of glasswork. Working with glass allows me to create beautiful and functional pieces that reflect both creativity and craftsmanship. Each day in my workshop is a journey of precision and imagination, where molten glass transforms into delicate forms under my skilled hands. From intricate sculptures to practical household items, I find joy in every step of the glassmaking process. My dedication to this ancient craft drives me to constantly refine my techniques and explore new possibilities, ensuring that each piece I create is a testament to both tradition and innovation in the world of glass art.. I can do many works of Glass such as: </p>
             <ol type="1" style="margin-left: 30px;">
-                <li>Window</li>
-                <li>Sliding Glass Door</li>
-                <li>Custom Design Touch Mirror (Mirror with background light and touch sensor)</li>
-                <li>Simple Mirror</li>
-                <li>Simple Glass Door (Plain/Design)</li>
+                <li>Aluminium Sliding Window, Door, Partition</li>
+                <li>Toughened Glass Door, Partiton</li>
+                <li>Shower Cubicles (Sell/Service)</li>
+                <li>Iron Window Glass Clay & Repotting</li>
+                <li>Glass Selicon</li>
+                <li>Glass CLay</li>
+                <li>Iron Window Handle & Stray</li>
+                <li>Glass Flim Pasting</li>
+                <li>Aluminium Sliding Rollear Change</li>
+                <li>Custom Touch Mirror Design(Mirror with led light and a touch Sensor)</li>
+                <li>Glass Shelf (Corner/Middle)</li>
+                <li>Acrylic Fiver Sheet</li>
+                <li>Fiver Mirror</li>
+                <li>Bathroom Mirror</li>
+                <li>Bathroom Cabinet with Mirror</li>
+                <li>Glass Etching Design</li>
+                <li>Old Touch Mirror (Service)</li>
             </ol>
             <p>and many more things.</p>
         </div>
@@ -48,13 +60,14 @@
     <section id="3">
         <div class="inner-section">
             <h1>Gallery</h1>
-            <div class="a"></div>
-            <h3>Glass Shelf</h3>
-            <div class="b"></div>
-            <h3>Front Image of Shop</h3>
-            <div class="c"></div>
-            <h3>Visiting Card of Shop</h3>
-            <div class="d"></div>
+            <img src="albela-glass-and-aluminium-sliding-tiljala-kolkata-aluminium-section-wholesalers-c0qpc0x59a.avif" alt="Image" height="400" width="250" title="Glass Flower Pot" class="one">
+            <img src="albela-glass-and-aluminium-sliding-tiljala-kolkata-aluminium-section-wholesalers-ld5g7mxt17.jpeg" alt="Image" height="350" width="350" title="Glass Shelf" class="two">
+            <img src="albela-glass-and-aluminium-sliding-tiljala-kolkata-aluminium-section-wholesalers-susg7akj7c.jpg" alt="Image" height="600" title="Led Mirror" class="three">
+            <img src="albela-glass-and-aluminium-sliding-tiljala-kolkata-aluminium-section-wholesalers-u53na2iojm.avif" alt="Image" height="700" width="690" title="Led Mirror" class="four">
+            <img src="Albela-Glass.jpg" alt="Image" height="400" width="685" title="Front View of the Shop" class="five">
+            <img src="Albela-Visiting-Card1.jpg" alt="Image"  title="Visiting Card" class="six">
+            <img src="glass.jpg" alt="Image" height="600" width="820" title="Glass Shelfs">
+            <img src="albela-glass-and-aluminium-sliding-tiljala-kolkata-aluminium-section-wholesalers-ec2h90qz1z.jpg" alt="Image" height="400" width="570" title="Glass Dinning Table">
         </div>
     </section>
     <section id="4">
@@ -70,7 +83,7 @@
     </section>
     <section id="5">
         <div class="inner-section">
-            <h1>In Developing COMMING SOON</h1>
+            <h1>In Developing COMING SOON</h1>
         </div>
     </section>
     <script src="script.js"></script>
